--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
-    "name": "request",
-    "version": "1.0.0",
-    "description": "http通用请求工具",
-    "main": "index.js",
-    "scripts": {
-        "build": "webpack --config build/webpack.conf.base.js",
-        "test": "jest --verbose"
-    },
-    "repository": {
-        "type": "git",
-        "url": "http://121.37.13.237/frontPackage/request.git"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.14.6",
-        "@babel/plugin-transform-runtime": "^7.14.5",
-        "@babel/preset-env": "^7.14.5",
-        "@babel/preset-react": "^7.14.5",
-        "babel-loader": "^8.2.2",
-        "clean-webpack-plugin": "^4.0.0-alpha.0",
-        "jest": "^27.0.4",
-        "progress-bar-webpack-plugin": "^2.1.0",
-        "ts-loader": "^9.2.3",
-        "webpack": "^5.39.0",
-        "webpack-cli": "^4.7.2"
-    },
-    "keywords": [
-        "http",
-        "request",
-        "vue",
-        "axios"
-    ],
-    "author": "张家瑞",
-    "license": "ISC",
-    "dependencies": {
-        "merge": "^2.1.1",
-        "axios": "^0.21.1",
-        "core-js": "^3.14.0"
-    }
+	"name": "@zhangjr0575/request",
+	"version": "1.0.0",
+	"description": "http通用请求工具",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "webpack",
+		"build-rollup": "rollup --config",
+		"test": "jest --verbose"
+	},
+	"repository": {
+		"type": "git",
+		"url": "http://121.37.13.237/frontPackage/request.git"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.14.6",
+		"@babel/plugin-transform-runtime": "^7.14.5",
+		"@rollup/plugin-alias": "^3.1.9",
+		"@rollup/plugin-commonjs": "^22.0.1",
+		"@rollup/plugin-node-resolve": "^13.3.0",
+		"@rollup/plugin-typescript": "^8.3.3",
+		"@types/jest": "^28.1.6",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"jest": "^28.1.3",
+		"progress-bar-webpack-plugin": "^2.1.0",
+		"rollup-plugin-terser": "^7.0.2",
+		"ts-jest": "^28.0.7",
+		"ts-loader": "^9.3.1",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0"
+	},
+	"keywords": [
+		"http",
+		"request",
+		"vue",
+		"axios"
+	],
+	"author": "张家瑞",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.27.2",
+		"core-js": "^3.23.5",
+		"merge": "^2.1.1",
+		"rollup": "^2.77.0",
+		"vue": "^3.2.37"
+	}
 }
