--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "webpack",
 		"build-rollup": "rollup --config",
 		"test": "jest --verbose",
-		"publish": "npm run build && npm publish --access public"
+		"release": "npm run build && npm publish --access public"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
