--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-transform-runtime": "^7.14.5",
+    "rollup": "^2.77.0",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -39,7 +40,6 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.23.5",
-    "merge": "^2.1.1",
-    "rollup": "^2.77.0"
+    "merge": "^2.1.1"
   }
 }
