--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --verbose",
     "release": "npm run build && npm publish --access public"
   },
+  "types": "types/index.d.ts",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-transform-runtime": "^7.14.5",
