--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "webpack",
 		"build-rollup": "rollup --config",
 		"test": "jest --verbose",
-		"release": "npm run build && npm publish --access public"
+		"release": "npm run build-rollup && npm publish --access public"
 	},
 	"types": "types/index.d.ts",
 	"devDependencies": {
