--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "ES6",
-    "module": "ES2015",
-    "baseUrl": "./",
-    "strict": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  },
-  "types": ["jest"],
-  "exclude": ["node_modules"],
-  "includes": ["./src/**/*", "./types/**/*"]
+	"compilerOptions": {
+		"moduleResolution": "Node",
+		"target": "ES5",
+		"module": "ES2015",
+		"baseUrl": "./",
+		"paths": {
+			"@/*": ["src/*"]
+		}
+	},
+	"types": ["jest"],
+	"exclude": ["node_modules"],
+	"includes": ["./src/**/*", "./types/**/*"]
 }
